# pyautd3

./: .coveragerc  .gitignore  .gitmodules  CHANGELOG.md  Makefile.toml  README.md  ThirdPartyNotice.txt  pyproject.toml  setup.cfg.template  x.py
.github/: dependabot.yml
.github/workflows/: build.yml  coverage.yml  pr.yml  release.yml
example/: ethercrab.py  nop.py  remote_soem.py  remote_twincat.py  simulator.py  soem.py  twincat.py
example/emulator/: modulation.py  output_ultrasound.py  rms.py  sound_field.py
example/samples/: bessel.py  custom.py  flag.py  focus.py  group.py  holo.py  plane.py  runner.py  stm.py  transtest.py  user_defined.py  wav.py
pyautd3/: __init__.py  autd.py  autd_error.py  drive.py  emit_intensity.py  emulator.py  geometry.py  phase.py  sampling_config.py
pyautd3/controller/: __init__.py  controller.py  controller.pyi  environment.py  sleeper.py  strategy.py  timer.py  timer.pyi  timer_strategy.py
pyautd3/derive/: __init__.py  builder.py  derive_builder.py  derive_datagram.py  derive_gain.py  derive_modulation.py
pyautd3/driver/: autd3_device.py  autd3_device.pyi  firmware_version.py  link.py  utils.py
pyautd3/driver/common/: __init__.py  angle.py  emit_intensity.py  freq.py  loop_behavior.py  phase.py  sampling_config.py
pyautd3/driver/datagram/: __init__.py  clear.py  clear.pyi  datagram.py  datagram_tuple.py  debug.py  debug.pyi  force_fan.py  force_fan.pyi  gain.py  group.py  mod_delay.py  modulation.py  output_mask.py  phase_corr.py  phase_corr.pyi  phase_filter.py  pulse_width_encoder.py  pulse_width_encoder.pyi  reads_fpga_state.py  reads_fpga_state.pyi  segment.py  silencer.py  synchronize.py  synchronize.pyi  with_finite_loop.py  with_loop_behavior.py  with_parallel_threshold.py  with_segment.py  with_segment.pyi  with_segment_transition.py  with_timeout.py
pyautd3/driver/defined/: __init__.py  angle.py  freq.py
pyautd3/driver/geometry/: __init__.py  device.py  geometry.py  rotation.py  transducer.py
pyautd3/ethercat/: __init__.py  dc_sys_time.py
pyautd3/gain/: __init__.py  bessel.py  bessel.pyi  cache.py  cache.pyi  custom.py  custom.pyi  focus.py  focus.pyi  gain.py  group.py  group.pyi  null.py  null.pyi  plane.py  plane.pyi  transform.py  transtest.py  uniform.py  uniform.pyi
pyautd3/gain/holo/: __init__.py  amplitude.py  backend.py  backend_cuda.py  backend_nalgebra.py  constraint.py  greedy.py  greedy.pyi  gs.py  gs.pyi  gspat.py  gspat.pyi  holo.py  lm.py  lm.pyi  naive.py  naive.pyi  sdp.py
pyautd3/internal/: datagram.py  gain.py  link.py  modulation.py  utils.py
pyautd3/link/: audit.py  ethercrab.py  nop.py  remote.py  simulator.py  soem.py  twincat.py  twincat.pyi  visualizer.py
pyautd3/link/soem/: __init__.py  adapter.py  local.py  local.pyi  remote.py  status.py  thread_priority.py
pyautd3/modulation/: __init__.py  cache.py  custom.py  custom.pyi  fir.py  fourier.py  fourier.pyi  mixer.py  modulation.py  radiation_pressure.py  resample.py  sampling_mode.py  sine.py  sine.pyi  square.py  square.pyi  static.py  static.pyi  transform.py
pyautd3/modulation/audio_file/: __init__.py  csv.py  csv.pyi  csv_.py  raw_pcm.py  raw_pcm.pyi  wav.py  wav.pyi
pyautd3/native_methods/: __init__.py  autd3.py  autd3_core.py  autd3_driver.py  autd3_link_soem.py  autd3capi.py  autd3capi_backend_cuda.py  autd3capi_def.py  autd3capi_driver.py  autd3capi_emulator.py  autd3capi_gain_holo.py  autd3capi_link_ethercrab.py  autd3capi_link_remote.py  autd3capi_link_simulator.py  autd3capi_link_soem.py  autd3capi_link_twincat.py  autd3capi_link_visualizer.py  autd3capi_modulation_audio_file.py  structs.py  utils.py
pyautd3/stm/: __init__.py  stm.py
pyautd3/utils/: __init__.py  duration.py
tests/: CHANGELOG.md  conftest.py  test_autd.py  test_emit_intensity.py  test_emulator.py  test_environment.py  test_geometry.py  test_phase.py  test_sampling_config.py
tests/controller/: test_builder.py
tests/driver/: test_utils.py
tests/driver/common/: test_emit_intensity.py  test_loop_behavior.py  test_phase.py  test_sampling_config.py
tests/driver/datagram/: test_debug.py  test_gain.py  test_gpio_out.py  test_group.py  test_modulation.py  test_output_mask.py  test_phase_corr.py  test_phase_filter.py  test_pulse_width_encoder.py  test_segment.py  test_silencer.py  test_with_parallel_threshold.py  test_with_timeout.py
tests/driver/defined/: test_angle.py  test_freq.py
tests/driver/ethercat/: test_dc_sys_time.py
tests/driver/fpga/: test_fpga_state.py
tests/gain/: test_bessel.py  test_cache.py  test_custom.py  test_focus.py  test_gain.py  test_group.py  test_null.py  test_plane.py  test_transtest.py  test_uniform.py
tests/gain/holo/: test_amp.py  test_backend.py  test_constraint.py  test_greedy.py  test_gs.py  test_gspat.py  test_lm.py  test_naive.py  test_sdp.py
tests/internal/: test_gain.py  test_modulation.py
tests/link/: test_audit.py  test_ethercrab.py  test_nop.py  test_remote.py  test_simulator.py  test_soem.py  test_twincat.py  test_visualizer.py
tests/modulation/: test_custom.py  test_fir.py  test_fourier.py  test_mixer.py  test_modulation.py  test_radiation_pressure.py  test_sine.py  test_square.py  test_static.py
tests/stm/: test_focus.py  test_gain.py  test_stm.py
tests/utils/: test_duration.py
tools/: update_bin.py
tools/wrapper-generator/: Cargo.toml
tools/wrapper-generator/src/: main.rs  parse.rs  python.rs  types.rs  utils.rs
tools/wrapper-generator/src/parser/: const.rs  enum.rs  function.rs  mod.rs  struct.rs  union.rs
tools/wrapper-generator/src/python/: const.rs  ctypes.rs  enum.rs  function.rs  mod.rs  struct.rs  union.rs
(+57 files in other folders)
