[project]
name = "pyautd3"
authors = [{ name = "Shun Suzuki", email = "suzuki@hapis.k.u-tokyo.ac.jp" }]
version = "38.0.1"
description = "AUTD3 library wrapper for python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = ["numpy>=2"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
]
[project.urls]
Repository = "https://github.com/shinolab/pyautd3.git"

[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
pyautd3 = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 150
exclude = [".venv", "venv"]

[tool.ruff.lint]
ignore = ["D", "SLF001", "C901", "PLR0913", "COM812"]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"pyautd3/*.py" = ["TD", "FIX002"]
"tests/*.py" = ["S101", "T201", "ANN201", "PLR0915", "PLR2004"]
"example/*.py" = ["T201", "PLR2004", "PD901"]
"pyautd3/native_methods/*.py" = ["ANN", "RUF012", "FBT001", "PLR0915"]

[tool.pyrefly]
project-includes = ["**/*.py*"]

[tool.pyrefly.errors]
bad-param-name-override = false

[[tool.pyrefly.sub-config]]
matches = "tests/**/*.py*"

[tool.pyrefly.sub-config.errors]
bad-argument-type = false

[[tool.pyrefly.sub-config]]
matches = "example/**/*.py*"

[tool.pyrefly.sub-config.errors]
missing-import = false

[dependency-groups]
dev = ["pytest>=8.4.1", "pytest-xdist>=3.8.0", "ruff>=0.14.8", "pytest-cov>=7.0.0", "build>=1.3.0", "wheel>=0.45.1", "pyrefly>=0.44.1"]
