[package]
name = "wrapper-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.2"
anyhow = "1.0.95"
syn = { version = "2.0.96", features = ["parsing", "full"] }
convert_case = "0.7.1"
cargo_metadata = "0.19.1"
itertools = "0.14.0"
tracing = "0.1.41"
quote = "1.0.38"
tracing-subscriber = "0.3.19"
